doc: update doc about news
